// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has a logo 1`] = `
<div
  className="src-shared-components-section-heading__container-logo src-shared-components-section-heading__container"
>
  <FaCheck
    className="icon"
  />
  <h2
    className="src-shared-components-section-heading__title"
  >
    <div
      id="child"
    />
  </h2>
</div>
`;

exports[`should render correctly when has no logo 1`] = `
<div
  className="src-shared-components-section-heading__container-no-logo src-shared-components-section-heading__container"
>
  <h2
    className="src-shared-components-section-heading__title"
  >
    <div
      id="child"
    />
  </h2>
</div>
`;
